--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,10 @@
 	</head>
 
 	<body>
-		<h1>Upload your CSV file</h1>
-		<form method="POST" action="/upload_csv" enctype="multipart/form-data">
+		<h1>Causal Graphs</h1>
+		<h2> An application to upload a dataset and visualize causal relations</h2>
+		<h3>Upload your CSV file</h3>
+		<form method="POST" action="/csv_data" enctype="multipart/form-data">
 				<input type="file" name="file">
 				<input type="submit" value="submit">
 		</form>
