--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 			</form>
 		</div>
 
-		<img src="../images/causal_graph_earth.jpeg" width = "30%" alt="graph"/ style="padding-bottom: 30px;"> 
+		<img src="/causal_graph_earth.jpeg" width = "30%" alt="graph"/ style="padding-bottom: 30px;"> 
 
 		<div class="learn">
 			<h3>Learn more about <a href="https://www.datascienceassn.org/sites/default/files/CAUSAL%20INFERENCE%20IN%20STATISTICS.pdf">Causal Inference</a></h3>
