connecting parts (without data in graph

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 		<h2> An application to visualize causal relationships</h2>
 		<h3> Upload your CSV file</h3>
 		<div class="csv-form">
-			<form method="POST" action="/csv_data" enctype="multipart/form-data">
+			<form method="POST" action="/causal_graph" enctype="multipart/form-data">
 				<input type="file" name="file">
 				<input type="submit" value="Submit">
 			</form>
